// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="user-nav"
>
  <a
    className="user-points"
    href="/@foo/points"
    onClick={[Function]}
    title="Points"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M20,14H4V8H9.08L7,10.83L8.62,12L11,8.76L12,7.4L13,8.76L15.38,12L17,10.83L14.92,8H20M20,19H4V17H20M9,4A1,1 0 0,1 10,5A1,1 0 0,1 9,6A1,1 0 0,1 8,5A1,1 0 0,1 9,4M15,4A1,1 0 0,1 16,5A1,1 0 0,1 15,6A1,1 0 0,1 14,5A1,1 0 0,1 15,4M20,6H17.82C17.93,5.69 18,5.35 18,5A3,3 0 0,0 15,2C13.95,2 13.04,2.54 12.5,3.35L12,4L11.5,3.34C10.96,2.54 10.05,2 9,2A3,3 0 0,0 6,5C6,5.35 6.07,5.69 6.18,6H4C2.89,6 2,6.89 2,8V19C2,20.11 2.89,21 4,21H20C21.11,21 22,20.11 22,19V8C22,6.89 21.11,6 20,6Z"
        fill="currentColor"
      />
    </svg>
  </a>
  <a
    className="user-wallet"
    href="/@foo/wallet"
    onClick={[Function]}
    title="Wallet"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M20,8H4V6H20M20,18H4V12H20M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z"
        fill="currentColor"
      />
    </svg>
  </a>
  <span
    className="notifications"
    onClick={[Function]}
    title="Notifications"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21"
        fill="currentColor"
      />
    </svg>
  </span>
  <div
    className="custom-dropdown float-right"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="user-avatar medium"
      style={
        Object {
          "backgroundImage": "url(https://images.ecency.com/u/foo/avatar/medium)",
        }
      }
    />
  </div>
</div>
`;

exports[`(2) Has rewards  1`] = `
<div
  className="user-nav"
>
  <a
    className="user-points"
    href="/@foo/points"
    onClick={[Function]}
    title="You have unclaimed points"
  >
    <span
      className="reward-badge"
    />
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M20,14H4V8H9.08L7,10.83L8.62,12L11,8.76L12,7.4L13,8.76L15.38,12L17,10.83L14.92,8H20M20,19H4V17H20M9,4A1,1 0 0,1 10,5A1,1 0 0,1 9,6A1,1 0 0,1 8,5A1,1 0 0,1 9,4M15,4A1,1 0 0,1 16,5A1,1 0 0,1 15,6A1,1 0 0,1 14,5A1,1 0 0,1 15,4M20,6H17.82C17.93,5.69 18,5.35 18,5A3,3 0 0,0 15,2C13.95,2 13.04,2.54 12.5,3.35L12,4L11.5,3.34C10.96,2.54 10.05,2 9,2A3,3 0 0,0 6,5C6,5.35 6.07,5.69 6.18,6H4C2.89,6 2,6.89 2,8V19C2,20.11 2.89,21 4,21H20C21.11,21 22,20.11 22,19V8C22,6.89 21.11,6 20,6Z"
        fill="currentColor"
      />
    </svg>
  </a>
  <a
    className="user-wallet"
    href="/@foo/wallet"
    onClick={[Function]}
    title="You have unclaimed rewards"
  >
    <span
      className="reward-badge"
    />
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M20,8H4V6H20M20,18H4V12H20M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z"
        fill="currentColor"
      />
    </svg>
  </a>
  <span
    className="notifications"
    onClick={[Function]}
    title="Notifications"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21"
        fill="currentColor"
      />
    </svg>
  </span>
  <div
    className="custom-dropdown float-right"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="user-avatar medium"
      style={
        Object {
          "backgroundImage": "url(https://images.ecency.com/u/foo/avatar/medium)",
        }
      }
    />
  </div>
</div>
`;

exports[`(3) usePrivate = false 1`] = `
<div
  className="user-nav"
>
  <a
    className="user-wallet"
    href="/@foo/wallet"
    onClick={[Function]}
    title="Wallet"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M20,8H4V6H20M20,18H4V12H20M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z"
        fill="currentColor"
      />
    </svg>
  </a>
  <div
    className="custom-dropdown float-right"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="user-avatar medium"
      style={
        Object {
          "backgroundImage": "url(https://images.ecency.com/u/foo/avatar/medium)",
        }
      }
    />
  </div>
</div>
`;
